test/bad/generics/type01.px

func f<T>(x: T): Int def
    return x

f("0")
